subnet.tf
resource "aws_subnet" "public" {
  vpc_id            = aws_vpc.cornerstone.id
  cidr_block        = var.cidr[count.index]
  availability_zone = var.az[count.index]
  count             = 2


  tags = {
    Name = "public-sub"
  }
}

resource "aws_subnet" "private" {
  vpc_id            = aws_vpc.cornerstone.id
  cidr_block        = "10.0.3.0/24"
  availability_zone = "us-east-1b"

  tags = {
    Name = "private-sub"
  }
}
